style: scrollbar style fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,8 @@ body {
   font-family: 'Pretendard', 'Poppins', 'sans-serif';
   font-size: 1.4rem;
   min-width: 280px;
+  @include scrollbar;
+
 }
 
 
